kyy-k8s-dev/app/frontend/fe-tiku-wap/fe-tiku-wap-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    aliyun.proxy.VIRTUAL_HOST_WEIGHT: "28"
    aliyun.routing.port_80: http://www.kaoyaya.com/tiku/wap/
    kompose.cmd: kompose-darwin-amd64 convert -f fe-tiku-wap.yaml
    kompose.version: 1.17.0 (70e82c92)

  labels:
    app: fe-tiku-wap
  name: fe-tiku-wap
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        app: fe-tiku-wap
    spec:
      imagePullSecrets:
        - name: beijing
      containers:
        - image: registry.cn-beijing.aliyuncs.com/kaoyaya/fe-tiku-wap:dev
          name: fe-tiku-wap
          ports:
            - containerPort: 80
          resources: {}
          imagePullPolicy: Always
      restartPolicy: Always
